modify jasper ts01,[05,14,14_1]

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-14-1/ts01-14-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-14-1/ts01-14-1.component.html
@@ -1,103 +1,105 @@
-<div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+<form (submit)="onSubmit($event)" ngNativeValidate>
+  <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
     <span>รายงานการตรวจสอบภาษีสรรพสามิต</span>
-</div>
+  </div>
 
-<div class="ui attached segment">
+  <div class="ui attached segment">
     <div class="ui grid">
-        <div class="ui two wide column">&nbsp;</div>
-        <div class="ui twelve wide column">
-            <div class="ui form">
-              <div class="inline fields">
-                <div class="seven wide field">
-                </div>
-                <div class="one wide field">
-                  <p>วันที่ : </p>
-                </div>
-                <div class="two wide field">
-                  <input type="text">
-                </div>
-                <div class="one wide field" style="padding-right: 0px;">
-                  <p>เดือน : </p>
-                </div>
-                <div class="two wide field">
-                  <input type="text">
-                </div>
-                <div class="one wide field">
-                  <p>ปี : </p>
-                </div>
-                <div class="two wide field">
-                  <input type="text">
-                </div>
-              </div>
-
-              <div class="inline fields">
-                <div class="two wide field">
-                  <p>เรียน : </p>
-                </div>
-                <div class="six wide field">
-                  <input type="text">
-                </div>
-              </div>
-
-              <div class="inline fields">
-                  <div class="four wide field">
-                    <p>ทะเบียนสรรพสามิตเลขที่ : </p>
-                  </div>
-                  <div class="four wide field">
-                    <input type="text">
-                  </div>
-                  <div class="four wide field">
-                    <p>รอบระยะเวลาที่ตรวจสอบภาษี : </p>
-                  </div>
-                  <div class="four wide field">
-                    <input type="text">
-                  </div>
-              </div>
-
-              <div class="inline fields">
-                <div class="five wide field">
-                  <p>ผลการตรวจสอบภาษีสรรพสามิตราย :</p>
-                </div>
-                <div class="five wide field">
-                  <input type="text">
-                </div>
-                <div class="three wide field">
-                  <p>ประเภทกิจการ : </p>
-                </div>
-                <div class="three wide field">
-                  <input type="text">
-                </div>
-              </div>
-
-              <div class="inline fields">
-                <div class="sixteen wide field">
-                  <p>ปรากฏรายละเอียดดังนี้ :</p>
-                </div>
-              </div>
-
-              <div class="inline fields">
-                <div class="fourteen wide field">
-                  <textarea name="" id="" cols="30" rows="3" style="resize: none;"></textarea>
-                </div>
-              </div>
-
+      <div class="ui two wide column">&nbsp;</div>
+      <div class="ui twelve wide column">
+        <div class="ui form">
+          <div class="inline fields">
+            <div class="seven wide field">
             </div>
-        </div>
-        <div class="ui two wide column">&nbsp;</div>
-    </div>
-</div>
+            <div class="one wide field">
+              <p>วันที่ : </p>
+            </div>
+            <div class="two wide field">
+              <input type="text" name="day" [(ngModel)]="obj.day">
+            </div>
+            <div class="one wide field" style="padding-right: 0px;">
+              <p>เดือน : </p>
+            </div>
+            <div class="two wide field">
+              <input type="text" name="month" [(ngModel)]="obj.month">
+            </div>
+            <div class="one wide field">
+              <p>ปี : </p>
+            </div>
+            <div class="two wide field">
+              <input type="text" name="year" [(ngModel)]="obj.year">
+            </div>
+          </div>
 
-<div class="ui bottom centered attached segment">
-  <div class="ui center aligned grid">
-    <div class="eight wide column">
-      <button class="ui mini green button" type="button">
-        <i class="save icon"></i>
-        พิมพ์เอกสาร
-      </button>
-      <button class="ui mini red button" type="button" (click)="onDiscard()">
-        <i class="times icon"></i>
-        ยกเลิก
-      </button>
+          <div class="inline fields">
+            <div class="two wide field">
+              <p>เรียน : </p>
+            </div>
+            <div class="six wide field">
+              <input type="text" name="sendTo" [(ngModel)]="obj.sendTo">
+            </div>
+          </div>
+
+          <div class="inline fields">
+            <div class="four wide field">
+              <p>ทะเบียนสรรพสามิตเลขที่ : </p>
+            </div>
+            <div class="four wide field">
+              <input type="text" name="exciseId" [(ngModel)]="obj.exciseId">
+            </div>
+            <div class="four wide field">
+              <p>รอบระยะเวลาที่ตรวจสอบภาษี : </p>
+            </div>
+            <div class="four wide field">
+              <input type="text" name="dateFrom" [(ngModel)]="obj.dateFrom">
+            </div>
+          </div>
+
+          <div class="inline fields">
+            <div class="five wide field">
+              <p>ผลการตรวจสอบภาษีสรรพสามิตราย :</p>
+            </div>
+            <div class="five wide field">
+              <input type="text" name="resultFor" [(ngModel)]="obj.resultFor">
+            </div>
+            <div class="three wide field">
+              <p>ประเภทกิจการ : </p>
+            </div>
+            <div class="three wide field">
+              <input type="text" name="businessType" [(ngModel)]="obj.businessType">
+            </div>
+          </div>
+
+          <div class="inline fields">
+            <div class="sixteen wide field">
+              <p>ปรากฏรายละเอียดดังนี้ :</p>
+            </div>
+          </div>
+
+          <div class="inline fields">
+            <div class="fourteen wide field">
+              <textarea name="details" [(ngModel)]="obj.details" cols="30" rows="3" style="resize: none;"></textarea>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="ui two wide column">&nbsp;</div>
     </div>
   </div>
-</div>
+
+  <div class="ui bottom centered attached segment">
+    <div class="ui center aligned grid">
+      <div class="eight wide column">
+        <button class="ui mini green button" type="submit">
+          <i class="save icon"></i>
+          พิมพ์เอกสาร
+        </button>
+        <button class="ui mini red button" type="button" (click)="onDiscard()">
+          <i class="times icon"></i>
+          ยกเลิก
+        </button>
+      </div>
+    </div>
+  </div>
+</form>
