--- a/workspace/ims-client/src/app/buckwaframework/project/pages/userManagement/userManagement.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/userManagement/userManagement.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="fields">
                     <div class="sixteen wide field">
                         <div class="ui grid">
@@ -56,7 +56,7 @@
                                     <div class="ui mini primary button" (click)="search()">
                                         <i class="search icon"></i> Search
                                     </div>
-                                    <div class="ui mini button" (click)="resetSearch()" >
+                                    <div class="ui mini button" (click)="resetSearch()">
                                         <i class="refresh icon"></i> Reset
                                     </div>
                                 </div>
@@ -89,9 +89,10 @@
                 <thead>
                     <tr>
                         <th></th>
-                        <th>Username</th>
-                        <th>sector</th>
-                        <th>Enabled</th>
+                        <th>รหัสผู้ใช้</th>
+                        <th>ภาค</th>
+                        <th>สิทธิ์การทำงาน</th>
+                        <th>สถานะ</th>
                         <th>Account Non Expired</th>
                         <th>Credentials Non Expired</th>
                         <th>Account Non Locked</th>
